# openllm

./: .gitignore  README.md  claude_god_tier_prompt_v2.txt  claude_wow_prompt.txt  claude_wow_prompt_v3.txt  ghost.html  index.html  package-lock.json  package.json  refactor_lucide.cjs  refactor_tailwind.cjs  vite.config.ts
.fossil/: cache.json
.github/workflows/: release.yml
src/: App.css  App.tsx  GhostHud.tsx  ghost-main.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_sysinfo.rs
src-tauri/capabilities/: desktop.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/engines/: flag_sanitizer.rs  llamacpp.rs  lmdeploy.rs  mod.rs  powerinfer.rs  template_engine.rs  vllm.rs
src-tauri/src/hub/: downloader.rs  mod.rs
src-tauri/src/ipc/: ws.rs
src-tauri/src/process/: binary_stream.rs  mod.rs  ring.rs  spawner.rs  stream.rs
src-tauri/src/profiler/: autopsy.rs  cpu.rs  gguf.rs  gpu.rs  memory.rs  mod.rs  predator.rs
src-tauri/src/router/: decision_tree.rs  flag_gen.rs  mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/storage/: pool.rs
src-tauri/src/swarm/: discovery.rs
src-tauri/src/synapse/: anomaly.rs  mod.rs  pulse.rs
src/components/: AgentsView.tsx  ArenaView.tsx  ChatView.tsx  CodeBlock.tsx  ConfirmModal.tsx  ErrorBoundary.tsx  HardwareHUD.tsx  HubView.tsx  KnowledgeView.tsx  LogViewer.tsx  Omnibar.tsx  OnboardingWizard.tsx  RightInspector.tsx  ServerView.tsx  SettingsView.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  ToastContainer.tsx  VectorGalaxy.tsx  VectorGalaxyR3F.tsx
src/components/dock/: DockLayout.tsx
src/components/ui/: Badge.tsx  BreathingInput.tsx  ChunkInspector.tsx  ChunkViz.tsx  EmptyState.tsx  GlassPanel.tsx  GlitchText.tsx  Icon.tsx  NeonButton.tsx  NeuralLoader.tsx  OtopsiOverlay.tsx  PersonaMorphOverlay.tsx  Select.tsx  ShatterButton.tsx  SpringSlider.tsx  SystemPromptModal.tsx  TelemetryChart.tsx  TokenPulse.tsx
src/hooks/: useAudioEngine.ts  useHardwareLerp.ts  useMagnetic.ts  useMicroInteractions.ts  useOperatorTempo.ts  useStreamBypass.ts  useTauriEvent.ts
src/store/: chatStore.ts  configStore.ts  downloadStore.ts  hardware.ts  inference.ts  logStore.ts  models.ts  personaStore.ts  serverStore.ts  sqlite.ts  telemetryStore.ts  tempoStore.ts  toastStore.ts  uiStore.ts
src/utils/: TelemetryRingBuffer.ts  oomCalculator.ts
src/workers/: ipc.worker.ts  shiki.worker.ts
