[package]
name = "forge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
pdf-extract = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "fs", "io-util", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sysinfo = "0.31"
dirs = "5"
tracing-appender = "0.2"
memmap2 = "0.9.10"
async-trait = "0.1.89"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
sha2 = "0.11.0"
futures = "0.3.32"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "json", "ws"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.11", features = ["cors", "auth", "validate-request"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
subtle = "2.5.0"
regex = "1.12.4"
minijinja = "2.20.0"
libc = "0.2.186"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.2"
window-vibrancy = "0.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-global-shortcut = "2"
rand = "0.8"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
static_assertions = "1.1.0"
chrono = "0.4.45"
postcard = { version = "1.1.3", features = ["alloc"] }
socket2 = "0.6.4"

[profile.release]
opt-level = "s"
lto = false
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_System_Wmi", "Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security"] }

[target."cfg(unix)".dependencies]
nix = { version = "0.29", features = ["signal", "process", "sched"] }
